# bevy_mod_krita

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
assets/krita/: .gitignore  demo.kra
examples/: pre_processing.rs  sprite.rs  texture.rs
src/: lib.rs  loader.rs  plugin.rs
