[package]
name = "bevy_mod_krita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bevy_app = { version = "0.9.1", default-features = false }
bevy_asset = "0.9.1"
bevy_ecs = "0.9.1"
bevy_render = "0.9.1"
image = { version = "0.24", default-features = false }
thiserror = "1.0.38"
zip = "0.6.4"
