[package]
name = "bevy_mod_krita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bevy_render = { version = "0.9.1", default-features = false }
bevy_app = { version = "0.9.1", default-features = false }
bevy_asset = { version = "0.9.1", default-features = false }
bevy_ecs = { version = "0.9.1", default-features = false }
image = { version = "0.24", default-features = false }
thiserror = "1.0.38"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
bevy = "0.9.1"
