[package]
name = "bevy_mod_krita"
version = "0.1.0"
edition = "2021"
authors = ["Tim Jentzsch"]
description = "Use Krita's .kra files directly in your Bevy app."
readme = "README.md"
repository = "https://github.com/TimJentzsch/bevy_mod_krita"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy"]
categories = [
  "game-development",
  "multimedia::images",
  "rendering::data-formats",
]
exclude = ["assets/**/*", ".github/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bevy_render = { version = "0.11", default-features = false }
bevy_app = { version = "0.11", default-features = false }
bevy_asset = { version = "0.11", default-features = false }
bevy_ecs = { version = "0.11", default-features = false }
image = { version = "0.24", default-features = false }
thiserror = "1.0.38"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
bevy = { version = "0.11", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_winit",
  "png",
  "filesystem_watcher",
  "x11",
] }

[profile.dev]
opt-level = 3

[[example]]
name = "sprite"
path = "examples/sprite.rs"

[[example]]
name = "texture"
path = "examples/texture.rs"
